# birdie

./: .gitignore  README.md  package-lock.json
apps/backend/: .gitignore  README.md  alembic.ini  aws.py  bucket.py  config.py  containers.py  database.py  database_models.py  main.py  pyproject.toml
apps/backend/cartitem/application/: cartitem_service.py
apps/backend/cartitem/domain/: cartitem.py
apps/backend/common/: auth.py  logger.py  s3_upload.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 2025_04_12_2240-5b477cbbdaa3_.py  2025_04_14_1832-deabdcabb706_user_add_memo.py  2025_04_25_1950-55ddaf85622a_env_config_test.py  2025_04_27_2127-304a4f1accba_modify_user_table.py  2025_04_27_2130-aa123ef1bdd1_change_column_order.py  2025_04_27_2207-627a6f2445d1_add_provider_id_column.py  2025_04_27_2212-1c77e38ff8ec_change_column_order.py  2025_04_28_1258-6f891934e0be_change_email_field_unique.py  2025_05_08_2324-c48d8d2c26d2_add_product_table.py  2025_05_12_1621-cc521f326ff2_create_product_table.py  2025_06_19_0045-0e0da8ab3608_add_product_option_table.py  2025_06_26_1539-6f952d8e29cb_add_cartitem_table.py  2025_06_27_2203-b26ee07ff310_add_productlike_and_productreview_models.py  2025_06_27_2205-c9bdc8f6f39a_fix_review_content_field.py  2025_06_28_2115-907c159c969d_add_visible_to_product_review.py  2025_06_28_2147-69f3aa60b551_add_user_name_to_product_review.py  2025_08_18_2253-3ec43642c2e7_add_userinquery_table.py  2025_08_30_2248-c293dd916f33_add_order_coupon_tables.py  2025_08_30_2251-94afa438efd6_change_table_name.py  2025_09_01_0023-e3a232039c0e_add_orderitem.py  2025_09_03_0106-2e4d45c6609f_add_payment_pointtransaction.py  2025_09_03_0237-a9e0f3350477_fix_order_related_tables.py  2025_09_06_1903-deb331cc3e8a_fix_provider_id_len.py  2025_09_08_0018-933c414961d1_fix_payment_method.py  2025_09_08_0043-9a802d269e03_add_merchant_id_column_to_payment.py  2025_09_08_0147-cbcb35f6112c_add_useraddress_table.py  2025_09_08_0424-55af0332f666_.py  2025_09_09_2113-99eb7ea1db0b_add_product_option_type_table.py  (+6 more)
apps/backend/utils/: crypto.py  db_utils.py  name_generator.py  val_image.py
apps/mobile/: .gitignore  (+9 more)
(+98 files in other folders)
